use dlopen to call aclrtLaunchCallback

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,8 @@ ACLOCAL_AMFLAGS = ${ACLOCAL_FLGAS}
 AM_CFLAGS = \
 	-Wall \
 	-Werror
-AM_LDFLAGS = 
+AM_LDFLAGS = \
+	-ldl
 
 include_HEADERS = include/libgmem.h
 lib_LTLIBRARIES = libgmem.la
@@ -30,16 +31,11 @@ libgmem_la_CFLAGS = $(AM_CFLAGS) \
 libgmem_la_LDFLAGS = $(AM_LDFLAGS)
 
 if BUILD_FOR_ASCEND
-ASCEND_PATH=/usr/local/Ascend/ascend-toolkit/latest/aarch64-linux
-
 libgmem_la_SOURCES += \
 	src/ascend/gmem_ascend.c
 
 AM_CFLAGS += \
-	-I$(top_srcdir)/src/ascend \
-	-I$(ASCEND_PATH)/include
+	-I$(top_srcdir)/src/ascend
 
-AM_LDFLAGS += \
-	-lascendcl \
-	-L$(ASCEND_PATH)/lib64/
+AM_LDFLAGS +=
 endif
