encapsulating jemalloc. add License Description.
Signed-off-by: Yang Yanchao <yangyanchao6@huawei.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 yangyanchao6@huawei.com 
+# Copyright (c) 2023 Huawei Technologies Co., Ltd. 
 # libgmem is licensed under Mulan PSL v2.
 # You can use this software according to the terms and conditions of the Mulan PSL v2.
 # You may obtain a copy of Mulan PSL v2 at:
@@ -17,13 +17,15 @@ AM_CFLAGS = \
 	-Wall \
 	-Werror
 AM_LDFLAGS = \
-	-ldl
+	-ldl \
+	-ljemalloc
 
 include_HEADERS = include/libgmem.h
 lib_LTLIBRARIES = libgmem.la
 
 libgmem_la_SOURCES = \
 	src/libgmem.c \
+	src/malloc.c \
 	src/init.c
 
 libgmem_la_CFLAGS = $(AM_CFLAGS) \
